--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "engines": {
+    "node": "10.15.3"
+  },
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "node ./bin/www",
+    "devstart": "nodemon ./bin/www"
   },
   "keywords": [],
   "author": "",
